# poke

./: .gitignore  Cargo.toml  README.md  poke_requirement.md
docs/plans/: 2025-12-26-phase0-core-refactor.md  2025-12-26-phase1-toolkit-implementation.md  2025-12-26-phase2-ops-monitoring.md  2025-12-26-phase3-6-complete-implementation.md  2025-12-26-phase3-complete-toolkit.md  2025-12-26-phase4-workflow-enhancement.md  2025-12-26-phase5-ops-deep-dive.md  2025-12-26-phase6-dashboard-explorer.md  2025-12-26-phase7-polish-and-enhancements.md  2025-12-26-poke-v2-architecture-design.md  2025-12-28-input-system-design.md
scripts/: dev-env.sh
src/: app.rs  main.rs
src/config/: mod.rs
src/core/: action.rs  command.rs  context.rs  mod.rs  module.rs
src/domain/: mod.rs
src/domain/abi/: decoder.rs  mod.rs  registry.rs
src/infrastructure/: mod.rs
src/infrastructure/abi/: decoder.rs  mod.rs  resolver.rs  scanner.rs
src/infrastructure/ethereum/: mod.rs  provider.rs  types.rs
src/infrastructure/runtime/: bridge.rs  mod.rs  worker.rs
src/modules/: mod.rs
src/modules/dashboard/: mod.rs
src/modules/export/: csv_export.rs  json_export.rs  mod.rs
src/modules/ops/: alerts.rs  health.rs  logs.rs  mempool.rs  metrics.rs  mod.rs  peers.rs  rpc_stats.rs
src/modules/toolkit/: call.rs  checksum.rs  convert.rs  create.rs  create2.rs  decode.rs  encode.rs  fourbyte.rs  gas.rs  hash.rs  hex.rs  mod.rs  (+3 more)
src/store/: abi_cache.rs  labels.rs  mod.rs
src/ui/: layout.rs  mod.rs  tabs.rs
tests/: app_flow_test.rs  app_state_test.rs  data_flow_test.rs  integration_test.rs
(+6 files in other folders)
